# search_engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  invertedIndex.h  main.cpp  requests.json  searchServer.cpp  searchServer.h  tests.cpp
include/: converterJSON.h  invertedIndex.h  searchServer.h
resources/: capacitor.txt  inductor.txt  resistor.txt  transistor.txt
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchServer.cpp
tests/: CMakeLists.txt  invertedIndex_test.cpp  searchServer_test.cpp
